--- a/package.json
+++ b/package.json
@@ -3,23 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^4.18.2",
-    "axios": "^0.24.0",
-    "firebase": "^9.6.1",
+    "antd": "^4.20.3",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.3",
-    "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false && react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": "4.1.1"
   },
   "eslintConfig": {
     "extends": "react-app"
